--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -34,6 +35,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
+    "uuid": "^10.0.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
   }
