--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     },
     {
       "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "module": "es2022",
+    "moduleResolution": "Node"
+  }
 }
