--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '3.8'
-
 services:
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    # dns:
+    #   - 8.8.8.8
+    #   - 8.8.4.4
     ports:
       - "80:80"
+    # environment:
+    #   VITE_API_BASE_URL: "http://localhost:3000/api"
     networks:
       - app-network
 
@@ -14,6 +17,9 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    # dns:
+    #   - 8.8.8.8
+    #   - 8.8.4.4
     command: >
       sh -c "
       npx prisma migrate deploy &&
@@ -35,6 +41,8 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: photoclub
+    ports:
+      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
