--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
     #   VITE_API_BASE_URL: "http://localhost:3000/api"
     networks:
       - app-network
+    # volumes:
+    #   - ../nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
 
   backend:
     build:
@@ -26,8 +30,8 @@ services:
       npm run start:prod"
     ports:
       - "3000:3000"
-    environment:
-      DATABASE_URL: postgres://admin:admin@db:5432/photoclub
+    # environment:
+    #   DATABASE_URL: postgres://admin:admin@db:5432/photoclub
     depends_on:
       - db
     networks:
