--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,5 +11,6 @@ RUN npm run build-only
 # Шаг 2: Раздача собранных файлов
 FROM nginx:1.26-alpine3.20
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
