--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,16 +33,17 @@ jobs:
       - name: Deploy application with Docker Compose
         run: |
           # Перейти в директорию с проектом
-          # cd ../../../
           pwd
+          cd ../../../../photo-club
+          ls
 
           # Обновить код с ветки main
-          # git pull origin main
+          git pull origin main
 
           # Перенести собранные файлы в нужные места
-          # cp -r frontend-dist/* frontend/dist
-          # cp -r backend-dist/* backend/dist
+          cp -r frontend-dist/* frontend/dist
+          cp -r backend-dist/* backend/dist
 
           # Собрать и запустить контейнеры
-          # docker-compose down
-          # docker-compose up -d --build
+          docker-compose down
+          docker-compose up -d --build
