--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,16 +34,21 @@ jobs:
         run: |
           # Перейти в директорию с проектом
           pwd
-          cd ../../../../photo-club
+          cd frontend-dist
+          ls
+          cd ../frontend-dist
+          cd backend-dist
+          ls
+          cd ../
           ls
 
           # Обновить код с ветки main
-          git pull origin main
+          # git pull origin main
 
           # Перенести собранные файлы в нужные места
-          cp -r frontend-dist/* frontend/dist
-          cp -r backend-dist/* backend/dist
+          # cp -r frontend-dist/* frontend/dist
+          # cp -r backend-dist/* backend/dist
 
           # Собрать и запустить контейнеры
-          docker-compose down
-          docker-compose up -d --build
+          # docker-compose down
+          # docker-compose up -d --build
