--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,22 +33,23 @@ jobs:
       - name: Deploy application with Docker Compose
         run: |
           # Перейти в директорию с проектом
-          pwd
+          # pwd
           # cd frontend-dist
           # ls
           # cd ../
           # cd backend-dist
           # ls
           # cd ../
-          ls
+          # ls
           
 
           # Обновить код с ветки main
           # git pull origin main
 
           # Перенести собранные файлы в нужные места
-          # cp -r frontend-dist/* frontend/
-          # cp -r backend-dist/* backend/
+          cp -r frontend-dist/* /home/prj/photoclub/frontend
+          cp -r backend-dist/* /home/prj/photoclub/backend
+          cp -r docker-compose.yml /home/prj/photoclub
 
           # Собрать и запустить контейнеры
           # docker-compose down
