--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,14 @@ services:
     # dns:
     #   - 8.8.8.8
     #   - 8.8.4.4
+    environment:
+      DATABASE_URL: postgres://admin:admin@db:5432/photoclub
     command: >
       sh -c "
       npx prisma migrate deploy &&
       npm run start:prod"
     ports:
       - "3000:3000"
-    # environment:
-    #   DATABASE_URL: postgres://admin:admin@db:5432/photoclub
     depends_on:
       - db
     networks:
