--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           npm install
           npm run build-only
           # Скопировать собранные файлы для использования в Dockerfile
-          cp -r dist ../frontend-dist/
+          cp -r dist ../frontend-dist
           cp -r node_modules ../frontend-dist
           cp -r nginx.conf ../frontend-dist
           cp -r Dockerfile ../frontend-dist
