--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies and build frontend
+      - name: Clean directory
         run: |
-          pwd
-          ls
-          cd frontend
-          ls          
+          cd /home/prj/photoclub/
+          rm -rf *
+
+      # - name: Install dependencies and build frontend
+      - name: Copy files
+        run: |
+          cp -r /home/actions-runner/_work/photo-club/photo-club /home/prj/photoclub/
+
+          # pwd
+          # ls
+          # cd frontend
+          # ls          
           # cd frontend
           # npm install
           # npm run build-only
@@ -28,41 +36,41 @@ jobs:
           # cp -r nginx.conf ../frontend-dist
           # cp -r Dockerfile ../frontend-dist
 
-      - name: Install dependencies and build backend
-        run: |
-          pwd
-          ls
-          # cd backend
-          # npm install
-          # npx prisma generate
-          # npm run build
-          # # Скопировать готовые файлы для использования в Dockerfile
-          # #
-          # cp -r dist ../backend-dist
-          # cp -r prisma ../backend-dist
-          # cp -r Dockerfile ../backend-dist
+      # - name: Install dependencies and build backend
+      #   run: |
+      #     pwd
+      #     ls
+      #     # cd backend
+      #     # npm install
+      #     # npx prisma generate
+      #     # npm run build
+      #     # # Скопировать готовые файлы для использования в Dockerfile
+      #     # #
+      #     # cp -r dist ../backend-dist
+      #     # cp -r prisma ../backend-dist
+      #     # cp -r Dockerfile ../backend-dist
 
-      - name: Deploy application with Docker Compose
-        run: |
-          # Перейти в директорию с проектом
-          # pwd
-          # cd frontend-dist
-          # ls
-          # cd ../
-          # cd backend-dist
-          # ls
-          # cd ../
-          # ls
+      # - name: Deploy application with Docker Compose
+      #   run: |
+      #     # Перейти в директорию с проектом
+      #     # pwd
+      #     # cd frontend-dist
+      #     # ls
+      #     # cd ../
+      #     # cd backend-dist
+      #     # ls
+      #     # cd ../
+      #     # ls
 
 
-          # Обновить код с ветки main
-          # git pull origin main
+      #     # Обновить код с ветки main
+      #     # git pull origin main
 
-          # Перенести собранные файлы в нужные места
-          # cp -r frontend-dist/* /home/prj/photoclub/frontend
-          # cp -r backend-dist/* /home/prj/photoclub/backend
-          # cp -r docker-compose.yml /home/prj/photoclub
+      #     # Перенести собранные файлы в нужные места
+      #     # cp -r frontend-dist/* /home/prj/photoclub/frontend
+      #     # cp -r backend-dist/* /home/prj/photoclub/backend
+      #     # cp -r docker-compose.yml /home/prj/photoclub
 
-          # Собрать и запустить контейнеры
-          # docker-compose down
-          # docker-compose up -d --build
+      #     # Собрать и запустить контейнеры
+      #     # docker-compose down
+      #     # docker-compose up -d --build
