--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     #
     environment:
       DATABASE_URL: postgres://admin:6e5AH311gavT72E2@db:5432/photoclub
+      JWT_SECRET: kycb
     command: >
       sh -c "
       npx prisma migrate dev &&
